--- a/views/users.pug
+++ b/views/users.pug
@@ -13,6 +13,9 @@ block content
                 tr
                     td=val.name
                     td=val.email
+                    td
+                        a.waves-effect.waves-light.btn(href='/users/editUser/' + val.email) Edit
+                        a.waves-effect.waves-light.btn(href='/users/deleteUser/' + val.email, style='margin-left:10px') Delete
 
 
 
